tests/types/errors/unary_bitwise_str_operand.mog
#!strict
var text str = "hello";
print(~text);
